Contributed by AdmiringWorm
* Euro Truck Simulator 2
Games to look into: DiRT, The PATH
=1/5/2013=
* Atlantis: The Lost Tales
* Atlantis II: Beyond Atlantis
* Atlantis III: The New World
* Carmageddon
* Carmageddon Splat Pack
* Closure - Steam only
* The Dark Eye - Chains of Satinav
* Dungeon Defenders - Added support for non-steam copies
* Enda & Harvey: The Breakout
* Harvey's New Eyes
* Iron Brigade
* Mutant Mudds
* NecroVisioN - Contributed by simtech76
* Oddworld: Stranger's Wrath HD
* Perimiter
* Return to Mysterious Island
* Rochard - Steam Cloud
* Snapshot
* Splice - Steam Cloud
* Star Wars: Tie Fighter - Contributed by Jason Lambert
* Unmechanical
* Warhammer 40,000: Dawn Of War GOTY - Added Steam support
* Wing Commander: The Secret Missions 2: Crusade
* Wing Commenter II: Special Operations 1
* Wing Commenter II: Special Operations 2
* Wizorb - Steam cloud
* Zen Bound 2 - Steam Cloud
Contributed by Arc Angel:
* Deadlight
* Dishonored
* Hotline Miami
* Realm of Ancient War
* Retro City Rampage

Contributed by AdmiringWorm
* 4x4 Hummer - Added Settings type and added new Registry key
* A.I.M. Racing - Added new Registry key
* Angels Online - Updated Settings Type
* APB Reloaded - Added Steam registry key
* Aquaria - Added Steam registry key
* Art of Murder - FBI Confidential
* Ben There, Dan That! - Added Settings type and added Steam Registry path
* Bobby
* Bounce!
* Call of Duty - Added Steam Registry path
* Call of Duty 2 - Added Steam Registry path
* Call of Duty 4: Modern Warfare - Added Steam Registry path
* Call of Duty: Modern Warfare 3 - Added Steam Registry paths
* Call of Duty: United Offensive - Added Steam Registry path
* Ceville - Added Settings type
* Cities in Motion - Added Maps Type
* Classic Car Racing - Updated Settings type and Added Steam Registry path
* Counter-Strike
* Counter-Strike: Condition Zero - Added Norwegian region
* Counter-Strike: Condition Zero: Deleted Scenes - Added Norwegian region